fixed mobile alignment on about

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -509,6 +509,9 @@ body {
 
 @media (max-width: 37.5em) {
   .text {
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
     width: auto;
     margin-left: 0px;
     margin: 4rem;
@@ -521,7 +524,6 @@ body {
 
 @media (max-width: 37.5em) {
   .picture {
-    margin-top: 7rem;
     margin-bottom: 3rem;
     text-align: center;
   }
